core/tests/acl/fixtures/snapshots/acl_tests__tests__basic-ping.snap
---
source: core/tests/acl/src/lib.rs
expression: resolved
---
Resolved {
    allowed_commands: {
        CommandKey {
            name: "plugin:ping|ping",
            context: Local,
        }: ResolvedCommand {
            windows: [
                "main",
            ],
            scope: None,
        },
    },
    denied_commands: {},
    command_scope: {},
    global_scope: ResolvedScope {
        allow: [],
        deny: [],
    },
}
