core/tests/acl/fixtures/snapshots/acl_tests__tests__file-explorer.snap
---
source: core/tests/acl/src/lib.rs
expression: resolved
---
Resolved {
    allowed_commands: {
        CommandKey {
            name: "plugin:fs|read_dir",
            context: Local,
        }: ResolvedCommand {
            windows: [
                "main",
            ],
            scope: None,
        },
        CommandKey {
            name: "plugin:fs|read_file",
            context: Local,
        }: ResolvedCommand {
            windows: [
                "main",
            ],
            scope: None,
        },
    },
    denied_commands: {},
    command_scope: {},
    global_scope: ResolvedScope {
        allow: [
            Map(
                {
                    "path": String(
                        "$APP",
                    ),
                },
            ),
        ],
        deny: [],
    },
}
